fix layout problem in all pages (display justification-alignment altered)

--- a/src/components/pages/Cart/Cart.css
+++ b/src/components/pages/Cart/Cart.css
@@ -1,8 +1,11 @@
+
+
 .cart-page {
   padding: var(--nn-padding-100);
   /* height: calc(950svh - 65px); */
   display: flex;
   flex-direction: column;
+  align-items:normal;
 }
 
 p.accent{
