--- a/src/components/pages/Checkout/Checkout.css
+++ b/src/components/pages/Checkout/Checkout.css
@@ -1,6 +1,7 @@
 .checkout-page {
   width: calc(100% - 2*(--nn-margin-main-100));
   /* padding: var(--nn-padding-100); */
+  background-color: var(--nn-cream-300);
   margin: var(--nn-margin-main-100);
   border-radius: var(--nn-border-radius-100);
   overflow: hidden;
@@ -32,7 +33,7 @@
   display: flex;
   width: 100%;
   flex-direction: column;
-  justify-content: flex-end;
+  align-self: flex-end;
   align-items: flex-end;
   background-color: var(--nn-cream-300);
   padding: var(--nn-padding-100);
