--- a/src/components/pages/Payment/Payment.css
+++ b/src/components/pages/Payment/Payment.css
@@ -33,6 +33,8 @@
   display: flex;
   width: 100%;
   flex-direction: column;
+  align-self: flex-end;
+  height: 100%;
   justify-content: flex-end;
   align-items: flex-end;
   background-color: var(--nn-cream-300);
